Fri May  6 01:00:50 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Alias_TypeCode_Static.cpp:
	* tao/Enum_TypeCode_Static.cpp:
	* tao/Objref_TypeCode_Static.cpp:
	* tao/Sequence_TypeCode_Static.cpp:
	* tao/String_TypeCode_Static.cpp:
	* tao/Struct_TypeCode_Static.cpp:
	* tao/Union_TypeCode_Static.cpp:
	* tao/Value_TypeCode_Static.cpp:

	  Work around broken MSVC++ 6 namespace support.

Fri May  6 07:37:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/TypeCode_Case.inl:
          Removed not needed ; at the end of the file

Thu May  5 23:11:21 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/DynamicInterface/Unknown_User_Exception.cpp:

	  Fixed duplicate symbol definition caused by struct/exception
	  TypeCode template specialization and primary template
	  instantiation.  Use the specialization instead.

Thu May  5 20:24:10 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_codegen.cpp:

	  Updated filenames in union TypeCode related header include
	  directives.

	* TAO_IDL/be/be_visitor_typecode/union_typecode.cpp:

	  Updated to generated code using new TypeCode::Case_T<> class
	  template.  Addresses incorrect default case TypeCode support.

	* tao/GIOPA.cpp:

	  Regenerated.

	* tao/TypeCode_CDR_Extraction.cpp:

	  Added missing support for union TypeCode demarshaling.

	* tao/TypeCode_Case.h:
	* tao/TypeCode_Case.inl:

	  Added dynamic union TypeCode support.

	* tao/TypeCode_Case_T.cpp:
	* tao/TypeCode_Case_T.h:
	* tao/TypeCode_Case_T.inl:

	  New class template that represents a union TypeCode case.  It is
	  used for both non-default and default union cases/members.
	  Separate classes are no longer necessary.

	* tao/TypeCode_Default_Case.cpp:
	* tao/TypeCode_Default_Case.h:
	* tao/TypeCode_Default_Case.inl:
	* tao/TypeCode_Non_Default_Case.cpp:
	* tao/TypeCode_Non_Default_Case.h:
	* tao/TypeCode_Non_Default_Case.inl:

	  Removed.  TypeCode_Case_T.* supercedes them.

	* tao/Union_TypeCode.cpp: