@@ -48,7 +48,6 @@ TAO::TypeCode::Alias<char const *,
                      CORBA::TypeCode_ptr const *,
                      TAO::Null_RefCount_Policy>::tao_duplicate (void)
 {
-  this->TAO::Null_RefCount_Policy::add_ref ();
 }
 
 void
@@ -56,7 +55,6 @@ TAO::TypeCode::Alias<char const *,
                      CORBA::TypeCode_ptr const *,
                      TAO::Null_RefCount_Policy>::tao_release (void)
 {
-  this->TAO::Null_RefCount_Policy::remove_ref ();
 }
 
 CORBA::Boolean
