@@ -39,14 +39,12 @@ void
 TAO::TypeCode::Sequence<CORBA::TypeCode_ptr const *,
                         TAO::Null_RefCount_Policy>::tao_duplicate (void)
 {
-  this->TAO::Null_RefCount_Policy::add_ref ();
 }
 
 void
 TAO::TypeCode::Sequence<CORBA::TypeCode_ptr const *,
                         TAO::Null_RefCount_Policy>::tao_release (void)
 {
-  this->TAO::Null_RefCount_Policy::remove_ref ();
 }
 
 CORBA::Boolean
