@@ -76,7 +76,6 @@ TAO::TypeCode::Struct<char const *,
                                                   CORBA::TypeCode_ptr const *> const *,
                       TAO::Null_RefCount_Policy>::tao_duplicate (void)
 {
-  this->TAO::Null_RefCount_Policy::add_ref ();
 }
 
 void
@@ -86,7 +85,6 @@ TAO::TypeCode::Struct<char const *,
                                                   CORBA::TypeCode_ptr const *> const *,
                       TAO::Null_RefCount_Policy>::tao_release (void)
 {
-  this->TAO::Null_RefCount_Policy::remove_ref ();
 }
 
 CORBA::Boolean
