@@ -66,7 +66,6 @@ TAO::TypeCode::Union<char const *,
                                          CORBA::TypeCode_ptr const *> const * const *,
                      TAO::Null_RefCount_Policy>::tao_duplicate (void)
 {
-  this->TAO::Null_RefCount_Policy::add_ref ();
 }
 
 void
@@ -76,7 +75,6 @@ TAO::TypeCode::Union<char const *,
                                          CORBA::TypeCode_ptr const *> const * const *,
                      TAO::Null_RefCount_Policy>::tao_release (void)
 {
-  this->TAO::Null_RefCount_Policy::remove_ref ();
 }
 
 CORBA::Boolean
